--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ friends: [
     #     title: "Su",
     #     href: "http://su.gallery/"
     # },{
-        title: “别点,会炸”,
-        href: "http://baidu.com”
+        title: "别点,会炸",
+        href: "http://baidu.com"
     }
 ]
